change modal, close modal on submit report
