# src/features/soil-lab/measurements/generate-report/model/fields-registry.ts
@@ -1,0 +1,10 @@
+import { createFieldRegistry } from '@/utils/react-hook-form/createFieldRegistry'
+
+export const measurementsGenerateReportFieldRegistry = createFieldRegistry({
+  dateFrom: {
+    label: { default: 'Дата й час від' },
+  },
+  dateTo: {
+    label: { default: 'Дата й час до' },
+  },
+} as const)
