# src/shared/api/soil-lab/model/index.ts
@@ -31,6 +31,9 @@ export * from './measurementListResponse'
 export * from './measurementLookupResponse'
 export * from './measurementUpdate'
 export * from './measurementUpdateNote'
+export * from './measurementsReportGenerationRequest'
+export * from './measurementsReportGenerationRequestDateFrom'
+export * from './measurementsReportGenerationRequestDateTo'
 export * from './permissionCreate'
 export * from './permissionCreateDescription'
 export * from './permissionDetailResponse'
